Minor code fixes
git-svn-id: https://localhost/svn/SMSCenter/trunk@8710 7754d8ab-9b54-e011-a251-0001c006bdc7